Fix: Fixed bug when moving calculator outside of screen a scroll option appears shifting elements on site

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   padding-top: 2rem;
   padding-bottom: 2rem;
   color: aliceblue;
+  overflow: hidden;
 }
 
 /* GitHub logo */
